--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,28 @@
                 <version>2.6.0</version>
         </dependency>
         
+        <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-entitymanager</artifactId>
+                <version>4.1.4.Final</version>
+        </dependency>
+        <dependency>
+                <groupId>org.hibernate.javax.persistence</groupId>
+                <artifactId>hibernate-jpa-2.0-api</artifactId>
+                <version>1.0.1.Final</version>
+        </dependency>
+        <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>4.1.4.Final</version>
+        </dependency>
+        <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.21</version>
+        </dependency>
+        
+        
     </dependencies>
 
     <build>
